[gd_scene load_steps=117 format=2]

[ext_resource path="res://Assets/TitleScreen01.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Title01.png" type="Texture" id=3]
[ext_resource path="res://Assets/StartButton01.png" type="Texture" id=4]
[ext_resource path="res://Assets/QuitButton01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Music/Track3Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/SelectionThingy.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/Waterfall Ambience.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 2240, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 2560, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 2880, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 3200, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 3520, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 3840, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 4160, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 4480, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 4800, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 5120, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 5440, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 5760, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 6080, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 6400, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 6720, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 7040, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 7360, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 7680, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 8000, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 8320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 8640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 8960, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 9280, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 9600, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 9920, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 10240, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 10560, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 10880, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 11200, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 11520, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 11840, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 12160, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 12480, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 12800, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 13120, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 13440, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 13760, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 14080, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 14400, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 14720, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 15040, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "BGAnimation",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 86, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 172, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 258, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 344, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 430, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 7 )
region = Rect2( 516, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 7 )
region = Rect2( 602, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 7 )
region = Rect2( 688, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 774, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 860, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 946, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 1032, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 1118, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 1204, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 1290, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 1376, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 1462, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 1548, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 1634, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 1720, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 1806, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 1892, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 1978, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 2064, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 2150, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 2236, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 2322, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 2408, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 2494, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 2580, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 2666, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 7 )
region = Rect2( 2752, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 7 )
region = Rect2( 2838, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 7 )
region = Rect2( 2924, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 3010, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 7 )
region = Rect2( 3096, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 7 )
region = Rect2( 3182, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 7 )
region = Rect2( 3268, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 7 )
region = Rect2( 3354, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 7 )
region = Rect2( 3440, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 7 )
region = Rect2( 3526, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 7 )
region = Rect2( 3612, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 7 )
region = Rect2( 3698, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 7 )
region = Rect2( 3784, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 7 )
region = Rect2( 3870, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 7 )
region = Rect2( 3956, 0, 86, 30 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 7 )
region = Rect2( 4042, 0, 86, 30 )

[sub_resource type="SpriteFrames" id=98]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
} ]

[sub_resource type="Animation" id=99]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=100]
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 43, 44, 45, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=101]
length = 2.0
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 43, 44, 45, 46 ]
}

[sub_resource type="Animation" id=102]
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=103]
length = 2.0
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="StyleBoxEmpty" id=104]

[sub_resource type="StyleBoxEmpty" id=105]

[sub_resource type="StyleBoxEmpty" id=106]

[sub_resource type="StyleBoxEmpty" id=107]

[sub_resource type="Animation" id=108]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 49 )
animation = "BGAnimation"
frame = 8
centered = false

[node name="Selection" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 98 )
animation = "idle"
centered = false

[node name="Title01" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="APTitle" type="AnimationPlayer" parent="Title01"]
anims/FadeInTitle = SubResource( 99 )

[node name="StartAnimation" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
hframes = 48

[node name="APStart" type="AnimationPlayer" parent="StartAnimation"]
anims/FadeInStart = SubResource( 100 )
anims/IdleStart = SubResource( 101 )

[node name="QuitAnimation" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false
hframes = 48

[node name="APQuit" type="AnimationPlayer" parent="QuitAnimation"]
anims/FadeInQuit = SubResource( 102 )
anims/IdleQuit = SubResource( 103 )

[node name="StartButton" type="Button" parent="."]
margin_left = 110.0
margin_top = 196.0
margin_right = 250.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 432, -26 )
custom_styles/hover = SubResource( 104 )
custom_styles/focus = SubResource( 105 )
disabled = true
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 390.0
margin_top = 196.0
margin_right = 530.0
margin_bottom = 240.0
custom_styles/hover = SubResource( 106 )
custom_styles/focus = SubResource( 107 )
disabled = true
enabled_focus_mode = 1
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="APFadeIn" type="AnimationPlayer" parent="FadeIn"]
autoplay = "fade_in"
anims/fade_in = SubResource( 108 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Track1 - Start"

[node name="AmbienceSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Waterfall Ambience"

[node name="Tween" type="Tween" parent="."]
[connection signal="animation_finished" from="StartAnimation/APStart" to="." method="_on_APStart_animation_finished"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="FadeIn/APFadeIn" to="." method="_on_AnimationPlayer_animation_finished"]
